[tool.poetry]
name = "random_walk"
version = "0.1.0"
description = "CUDA Optimized Random Walk implemented in C++ and then exposed via Cython."
authors = ["Ashutosh Tiwari <findashutoshtiwari@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "graph_ml"}]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "~3.10"
cython = "^3.0.10"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'


[build-system]
requires = ["poetry_core", "Cython"]
build-backend = "poetry.core.masonry.api"


